tests/baselines/reference/moduleIdentifiers.errors.txt
moduleIdentifiers.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== moduleIdentifiers.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface P { x: number; y: number; }
        export var a = 1
    }
    
    //var p: M.P;
    //var m: M = M;
    var x1 = M.a;
    //var x2 = m.a;
    //var q: m.P;